successfully extracted the types of a card inside a response to the api call